k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foobar-api
spec:
  selector:
    app: foobar-api
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
