k8s/traefik-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics
  namespace: kube-system
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 9100
      targetPort: 9100
  type: ClusterIP
